--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body{
             margin: auto;
             line-height: 2em;
         }
-        
+    
+section {padding: 2em 0 2em 0 }
 
 /* TYPOGRAPHY */
 
@@ -24,9 +25,7 @@ body{
     h3 {font-size: 1.5em;}
     
 .intro {
-    font-size: 1.2em;
-
-
-
+    font-size: 1.25em;
+    line-height: 1.9em;
 
 }
