--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,13 @@ section {padding: 2em 0 2em 0 }
     line-height: 1.9em;
 
 }
+
+/* ------------- LINKS --------------- */
+
+a{
+    color: #c06;
+    text-decoration: none;
+
+
+
+}
