Added hover state to nav

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,12 @@ section {padding: 2em 0 2em 0 }
 a{
     color: #c06;
     text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 
+}
 
-
+a:hover{
+    color: aqua;   
+    
 }
