--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ section {padding: 2em 0 2em 0 }
     }
     
     h1 {font-size: 3.375em;}
-    h2 {font-size: 2.25em;}
+    h2 {
+        
     h3 {font-size: 1.5em;}
     
 .intro {
@@ -41,6 +42,8 @@ a{
 }
 
 a:hover{
-    color:crimson;   
+    color: cornflowerblue;
+    border-bottom: 1px dotted;
+    
     
 }
