--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* --------- CSS RESET -------- */
+
+*{
+    padding: 0;
+    margin: 0;
+    font-size: 100%;
+    line-height: 1em;}
+
 body{
             width: 75%;
             max-width:650px;
@@ -7,8 +15,7 @@ body{
             color: #666666;
             background-color: #f0f0f0;
             margin: auto;
-            line-height: 2em;
-        }
+            line-height: 2em;}
     
 section {padding: 2em 0 2em 0 }
 
@@ -18,48 +25,81 @@ section {padding: 2em 0 2em 0 }
         font-weight: normal;
         color: #c06;
         text-align: center;
-    }
+        line-height: 10em:}
     
     h1 {font-size: 3.375em;
     line-height: 1.3em}
-    h2 {font-size: 2.25em;}
+    h2 {font-size: 2.25em;
+    padding-bottom: 0.5em}
     h3 {font-size: 1.5em;}
 
 header h2{
     
     font-style: italic;
     font-size: 1.8em;
-    margin: -0.5em 0 1em 0;
-
-}
+    margin: 0.5em 0 1em 0;}
 
 
 .intro {
     font-size: 1.25em;
-    line-height: 1.9em;
+    line-height: 1.9em;}
 
-}
-
+p{
+ line-height: 1.7em;
+    padding-bottom: 1em;}
 
 blockquote{
     
-    padding: 2em 0;
+    padding: 1em 0;
     font-size: 1.75em;
-    line-height: 1.5em;
+    line-height: 1.3em;
     margin:  0;
-}
+    text-indent: -13px;}
 
 cite{
-    font-size: .75em;
-    
-    
-}
+    font-size: .75em;}
 
 
 .anchor{
     text-transform: uppercase;
-    font-size: .75em;
-}
+    font-size: .75em;}
+
+/* --------------- IMAGES ------------------ */
+
+
+
+
+
+/* --------------- TABLE ------------------ */
+
+table{
+    margin: auto;
+    width: 100%;
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 2px;
+    border-color: #c06;}
+
+caption{
+    margin-bottom: 1.5em;
+    text-transform: uppercase;}
+
+table.head, th{
+    text-transform: uppercase;
+    background-color: #C06;
+    text-align: left;
+    font-weight: normal;}
+
+th, td{
+    padding: .6em;}
+
+th{color: white;}
+
+tr{color: #c06;}
+
+
+table, th, td{
+    border: 1px solid #C06;}
 
 
 
@@ -69,17 +109,11 @@ cite{
 a{
     color: #c06;
     text-decoration: none;
-    text-transform: uppercase;
-   
-
-}
+    text-transform: uppercase;}
 
 a:hover{
     color: darkcyan;
-    border-bottom: 1px dotted;
-    
-    
-}
+    border-bottom: 1px dotted;}
 
 
 /* ------------- NAV ----------------- */
@@ -89,21 +123,15 @@ nav {
     border-top: 1px solid #333;
     border-bottom: 1px solid #333;
     text-transform: uppercase;
-    
-}
+    padding: 15px;}
 
 nav ul{
     text-align: center;
-    letter-spacing: 2px;
-    
-    
-}
+    letter-spacing: 2px;}
 
 nav ul li {
     display: inline;
-    margin: 20px;
-    
-}
+    margin: 20px;}
 
 
 
@@ -111,8 +139,49 @@ nav ul li {
 /* ------------- FOOTER ----------------- */
 
 footer{
-    line-height: 1em;
+    line-height: 1.2em;
     font-size: 15px;
-    padding-bottom: 2em;
+    padding-bottom: 2em;}
+
+footer hr{ 
+    margin-bottom: auto;}
+
+.contact {
+    padding-top: 2em;
+    margin: auto;
+    text-align: center;}
+
+
+
+
+
+
+/* -------------- SMARTPHONE ---------------- */
+@media (max-width: 30em) {
+    
+    body{
+        margin: auto 0;
+        background: #BEE9C7;
+        width: 100%;
+        font-size: 110%;}
+    
+    article {
+        width: 90%;}
+    
+    
+    h1{ font-size: 2.9em;}
+    
+    blockquote{
+        padding:20px;
+        line-height: 1.5em}
+    
+    hgroup h2 { font-size: 1.5em;
+        padding-top: 0.5em}
+    
+    nav ul li { font-size: .75em;
+        margin: 10px;}
+
+    
     
 }
+        
