--- a/css/style01.css
+++ b/css/style01.css
@@ -1,6 +1,6 @@
 /* --------- CSS RESET -------- */
 
-*{
+/**{
     padding: 0;
     margin: 0;
     font-size: 100%;
@@ -19,7 +19,6 @@ body{
     
 section {padding: 2em 0 2em 0 }
 
-/* ------------- TYPOGRAPHY --------------- */
 
     h1, h2, h3 {
         font-weight: normal;
@@ -83,7 +82,7 @@ img {
     
 
 
-/* --------------- TABLE ------------------ */
+/* --------------- TABLE ------------------ 
 
 table{
     margin: auto;
@@ -117,7 +116,7 @@ table, th, td{
 
 
 
-/* ------------- LINKS --------------- */
+/* ------------- LINKS --------------- 
 
 a{
     color: #c06;
@@ -129,7 +128,7 @@ a:hover{
     border-bottom: 1px dotted;}
 
 
-/* ------------- NAV ----------------- */
+/* ------------- NAV ----------------- 
 
 nav {
     
@@ -149,8 +148,7 @@ nav ul li {
 
 
 
-/* ------------- FOOTER ----------------- */
-
+/* ------------- FOOTER ----------------- 
 footer{
     line-height: 1.2em;
     font-size: 15px;
@@ -169,7 +167,7 @@ footer hr{
 
 
 
-/* -------------- SMARTPHONE ---------------- */
+/* -------------- SMARTPHONE ---------------- 
 @media (max-width: 30em) {
     
     body{
